Fixed text spacing under images in info section

--- a/style.css
+++ b/style.css
@@ -122,18 +122,20 @@ body {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    
 }
 
 .infoContainer {
     display: flex;
     flex-wrap: wrap;
-    width: 200px;
     justify-content: center;
+    width: 200px;
 }
 
 .infoContainer p {
     text-align: center;
+    font-weight: 300;
+    font-size: 14px;
+    width: 100px;
 }
 
 .quoteSection {
